# game-sys

./: CMakeLists.txt  README.md  main.c
src/: CMakeLists.txt  donut.cpp  donut.h  main.cpp  shader_manager.cpp  shader_manager.h  voxel.cpp  voxel.h
src/libs/maths/: fast_inv.sqrt.h  fast_inv_sqrt.cpp
src/shaders/: fragment.glsl  vertex.glsl
vendors/: CMakeLists.txt
vendors/imgui/: CMakeLists.txt
vendors/opengl/: CMakeLists.txt
vendors/sdl/: CMakeLists.txt
